tests/integration/snapshots/integration__snapshot__excessive_permissions-6.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"excessive-permissions/workflow-empty-perms.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
